# Satellite-Open-Source

./: README.md  example_mission.py  pyproject.toml  requirements.txt
src/satellite/orbit/: __init__.py  orbit_dynamics.py
src/satellite/propagation/: __init__.py  link_budget.py
src/satellite/signal/: sdr_utils.py
tests/: test_propagation.py
